--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="../styles/style.css" />
-    <link rel="stylesheet" href="../styles/lista-productos.css">
+    <link rel="stylesheet" href="./styles/style.css" />
+    <link rel="stylesheet" href="./styles/lista-productos.css">
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500&display=swap" rel="stylesheet"/>
@@ -25,7 +25,7 @@
           <input i type="text" placeholder="Qué deseas buscar?" />
         </div>
         <div class="login">
-          <a href="login.html"><button type="submit">Login</button></a>
+          <a href="/screens/login.html"><button type="submit">Login</button></a>
         </div>
         <div class="disclaimer"> Pagina creada para la comunidad MAR gaming <br/> para el role-play de GTA V-FENIX<br/> por ningun motivo se busca promover el comercio de<br/> productos ilegales y/o que puedan provocar un daño <br/> unete a la comundad <a href="https://discord.gg/XfqqrWNAhy">aquí</a></div>
       </nav>
