--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <nav>
         <div class="logo-busqueda">
           <div class="logo"><a href="index.html">
-            <img src="../assets/logo.png" alt="logo" />
+            <img src="./assets/logo.png" alt="logo" />
             <p class="logo-morado">MAR</p>
             <p>Store</p></a>
           </div>
@@ -57,7 +57,7 @@
 
     <section class="contacto">
       <div class="referencia">
-        <img src="../assets/logo.png" alt="logo" />
+        <img src="./assets/logo.png" alt="logo" />
         <p>MAR</p>
         <p>STORE</p>
       </div>
