--- a/screens/producto.html
+++ b/screens/producto.html
@@ -15,7 +15,7 @@
     <header>
       <nav>
         <div class="logo-busqueda">
-          <div class="logo"><a href="index.html">
+          <div class="logo"><a href="../index.html">
             <img src="../assets/logo.png" alt="logo" />
             <p class="logo-morado">MAR</p>
             <p>Store</p></a>
