--- a/index.html
+++ b/index.html
@@ -50,8 +50,47 @@
           </div>
         </div>
       </div>
-      <section class="seccion-productos" data-product>
-
+      <section class="seccion-productos" data-product> 
+        <div data-id="36">
+          <div class="producto">
+              <img src="https://media.discordapp.net/attachments/855484413059006474/1051291153355509850/8bc1fe-1.png?width=1247&amp;height=676" alt="img">
+              <h1 class="product-name"> Anhilator </h1>
+              <p class="precio">$10,000.00</p>
+              <a class="ver-producto" href="../produto.html?id=36">Ver Producto</a>
+          </div>
+        </div> 
+          <div data-id="37">
+            <div class="producto">
+                <img src="https://media.discordapp.net/attachments/855484413059006474/1051290892520144966/latest.png?width=1202&amp;height=676" alt="img">
+                <h1 class="product-name"> Insurgent </h1>
+                <p class="precio">$120,000.00</p>
+                <a class="ver-producto" href="../produto.html?id=37">Ver Producto</a>
+            </div>   
+        </div> 
+        <div data-id="57">
+          <div class="producto">
+              <img src="https://th.bing.com/th/id/OIP.v4qp4q-kmOTv1wvqVaFwtAAAAA?pid=ImgDet&amp;w=324&amp;h=177&amp;rs=1" alt="img">
+              <h1 class="product-name"> Auto desechable </h1>
+              <p class="precio">$6,000.00</p>
+              <a class="ver-producto" href="../produto.html?id=57">Ver Producto</a>
+          </div>    
+        </div>
+        <div data-id="60">
+          <div class="producto">
+            <img src="https://th.bing.com/th/id/OIP.C9eow1c893S3T4WGwE2CPAHaEK?pid=ImgDet&amp;rs=1" alt="img">
+            <h1 class="product-name"> Moto desechable </h1>
+            <p class="precio">$4,000.00</p>
+            <a class="ver-producto" href="../produto.html?id=60">Ver Producto</a>
+          </div>   
+        </div>
+        <div data-id="53">
+          <div class="producto">
+              <img src="https://th.bing.com/th/id/OIP.03FtnQkp948lyowUnaj61AHaHa?pid=ImgDet&amp;rs=1" alt="img">
+              <h1 class="product-name"> seguro de vida </h1>
+              <p class="precio">$100,000.00</p>
+              <a class="ver-producto" href="../produto.html?id=53">Ver Producto</a>
+          </div>   
+      </div>
       </section>
     </section>
 
